--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ classifiers =
 [options]
 install_requires = 
     numba>=0.56.0
-    numpy==1.22.4
+    numpy>=1.22
     pandas>=1.3.5
     tqdm>=4.64.0
     cffi==1.16.0
